--- a/apps/web/src/styles/app.css
+++ b/apps/web/src/styles/app.css
@@ -13,10 +13,6 @@
 
   html,
   body {
-    @apply text-gray-900 bg-gray-50 dark:bg-gray-950 dark:text-gray-200;
-  }
-
-  .using-mouse * {
-    outline: none !important;
+    @apply bg-gray-50 text-gray-900 dark:bg-gray-950 dark:text-gray-200;
   }
 }
